--- a/spage.html
+++ b/spage.html
@@ -1,6 +1,11 @@
-<html><head><title>ESP32 RoboticArm</title></head>
-<body><h1>ESP32 LED Control</h1>
-<form action="/led" method="get">
-<button name="state" value="on" type="submit">LED ON</button>
-<button name="state" value="off" type="submit">LED OFF</button>
-</form></body></html>
+<html>
+  <head><title>ESP32 RoboticArm</title></head>
+  <body>
+    <h1>ESP32 Servo Control</h1>
+    <form action="/servo" method="get">
+      <label for="angle">Servo Angle (0–180°):</label>
+      <input type="number" name="angle" min="0" max="180" value="90">
+      <button type="submit">Nastavit</button>
+    </form>
+  </body>
+</html>
